RESOLVED FIXED172286
[Win] Many layout tests are failing.
https://bugs.webkit.org/show_bug.cgi?id=172286
Summary [Win] Many layout tests are failing.
Per Arne Vollan
Reported 2017-05-18 06:28:49 PDT
The following line of text appears unexpectedly in many test results: ERROR: TestRunner::grantWebNotificationPermission(JSStringRef) not implemented
Attachments
Patch (2.02 KB, patch)
2017-05-18 06:34 PDT, Per Arne Vollan
bfulgham: review+
Per Arne Vollan
Comment 1 2017-05-18 06:34:15 PDT
Brent Fulgham
Comment 2 2017-05-18 09:39:43 PDT
Comment on attachment 310504 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=310504&action=review > Tools/ChangeLog:8 > + Add a FIXME comment about unimplemented functions, instead of writing this to the test result file. Can you please file a Bugzilla to implement the work, and then include it in the Fixme's below?
Per Arne Vollan
Comment 3 2017-05-18 11:28:01 PDT
(In reply to Brent Fulgham from comment #2) > Comment on attachment 310504 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=310504&action=review > > > Tools/ChangeLog:8 > > + Add a FIXME comment about unimplemented functions, instead of writing this to the test result file. > > Can you please file a Bugzilla to implement the work, and then include it in > the Fixme's below? Thanks for reviewing! I will update the patch with Bugzilla links before landing.
Per Arne Vollan
Comment 4 2017-05-18 11:28:23 PDT
Note You need to log in before you can comment on or make changes to this bug.